# ultra-low-latency-orderbook

./: .gitignore  CMakeLists.txt  README.md  run_itch_replays.sh  test_matching.cpp
benchmarks/: benchmark_orderbook.cpp  itch_book_replay.cpp  itch_replay.cpp  profile_driver.cpp
dashboard/: index.html  ndjson_playback.py  udp_ws_bridge.py
docs/: ARCHITECTURE.md  aligned_results.txt  baseline_million_ops.txt  baseline_results.txt  bench_aligned.txt  bench_array.txt  bench_unaligned.txt  itch_replay_2026-06-09_003448.md  itch_replay_2026-06-09_003836.md  itch_replay_2026-06-23_164410.md  optimization_01_memory_pool.md  optimization_02_array_ladder.md  optimization_03_hashmap_attempt.md  pooled_million_ops.txt  pooled_results.txt  profiling_NASDAQ_sample500MB.md  profiling_notes.md  profiling_real_NASDAQ.md
fpga/: Makefile  README.md
fpga/rtl/: axis_reg.v  axis_skip_align.v  eth_parser.v  feed_top.v  ipv4_parser.v  itch_parser.v  mold_parser.v  udp_parser.v
fpga/tb/: frames.py  test_axis_reg.py  test_axis_skip_align.py  test_eth_parser.py  test_feed_top.py  test_frames.py  test_ipv4_parser.py  test_itch_parser.py  test_mold_parser.py  test_udp_parser.py
fpga/tools/: itch_dump.cpp
include/: book_replay.hpp  itch_parser.hpp  object_pool.hpp  order.hpp  orderbook.hpp  price_level.hpp  rdtsc_timer.hpp  types.hpp
metrics/: aggregator_demo.cpp  benchmark_false_sharing.cpp  benchmark_overhead.cpp  book_dashboard_demo.cpp  engine_metrics_demo.cpp  itch_metrics_replay.cpp  json_snapshot_demo.cpp  test_alerts.cpp  test_depth.cpp  test_engine_wiring.cpp  test_instrument.cpp  test_spsc.cpp  udp_publish_demo.cpp
metrics/include/: aggregator.hpp  book_view.hpp  latency_histogram.hpp  metrics_alerts.hpp  metrics_config.hpp  metrics_event.hpp  metrics_recorder.hpp  metrics_snapshot.hpp  spsc_ring.hpp  tsc.hpp  udp_publisher.hpp
src/: orderbook.cpp
tests/: alloc_check.cpp  manual_test.cpp  test_orderbook.cpp
